Refactoring, koristim malo i java21