@@ -4,15 +4,13 @@ import com.automaterijal.application.domain.dto.ValueHelpDto;
 import com.automaterijal.application.domain.mapper.OpsteInformacijeMapper;
 import com.automaterijal.application.domain.repository.valuehelp.NacinPlacanjaRepository;
 import com.automaterijal.application.domain.repository.valuehelp.NacinPrevozaRepository;
+import java.util.List;
 import lombok.AccessLevel;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,9 +28,9 @@ public class OpsteInformacijeService {
     final OpsteInformacijeMapper mapper;
 
     public List<ValueHelpDto> vratiSveNacinePlacanja() {
-        return nacinPlacanjaRepository.findAll().stream().map(mapper::map).collect(Collectors.toList());
+        return nacinPlacanjaRepository.findAll().stream().map(mapper::map).toList();
     }
     public List<ValueHelpDto> vratiSveNacinePrevoza() {
-        return nacinPrevozaRepository.findAll().stream().map(mapper::map).collect(Collectors.toList());
+        return nacinPrevozaRepository.findAll().stream().map(mapper::map).toList();
     }
 }
