@@ -1,6 +1,5 @@
 package com.automaterijal.application.services;
 
-
 import com.automaterijal.application.domain.dto.MagacinDto;
 import com.automaterijal.application.domain.dto.RobaDto;
 import com.automaterijal.application.domain.entity.PodGrupa;
@@ -29,33 +28,34 @@ import org.springframework.transaction.annotation.Transactional;
 @Slf4j
 public class ProizvodjacService {
 
-  @NonNull
-  final ProizvodjacRepository proizvodjacRepository;
-  @NonNull
-  final RobaService robaService;
+  @NonNull final ProizvodjacRepository proizvodjacRepository;
+  @NonNull final RobaService robaService;
 
   static final String SVI_PROIZVODJACI = "Svi proizvodjači";
 
-  /**
-   * Popunjavanje proizvodjaca u zavistosti od kriterijuma
-   */
-  public void popuniProizvodjace(List<RobaDto> robaDtos, MagacinDto magacinDto,
-      UniverzalniParametri parametri) {
+  /** Popunjavanje proizvodjaca u zavistosti od kriterijuma */
+  public void popuniProizvodjace(
+      List<RobaDto> robaDtos, MagacinDto magacinDto, UniverzalniParametri parametri) {
     List<Proizvodjac> proizvodjaci;
     if (parametri.getPodgrupaZaPretragu() == null && parametri.getTrazenaRec() == null) {
       proizvodjaci = pronadjiSveProizvodjaceZaVrstu(parametri);
     } else {
-      Set<String> proizKljuc = robaDtos.stream().map(RobaDto::getProizvodjac)
-          .map(Proizvodjac::getProid).collect(Collectors.toSet());
+      Set<String> proizKljuc =
+          robaDtos.stream()
+              .map(RobaDto::getProizvodjac)
+              .map(Proizvodjac::getProid)
+              .collect(Collectors.toSet());
       proizvodjaci = proizvodjacRepository.findByProidIn(proizKljuc);
     }
     getPopuniProizvodjaceURobi(robaDtos, proizvodjaci);
 
     if (parametri.getProizvodjac() != null) {
-      boolean trazeniProizvodjacPostoji = proizvodjaci.stream()
-          .anyMatch(proizvodjac -> proizvodjac.getProid().equals(parametri.getProizvodjac()));
+      boolean trazeniProizvodjacPostoji =
+          proizvodjaci.stream()
+              .anyMatch(proizvodjac -> proizvodjac.getProid().equals(parametri.getProizvodjac()));
       if (!trazeniProizvodjacPostoji) {
-        proizvodjacRepository.findById(parametri.getProizvodjac())
+        proizvodjacRepository
+            .findById(parametri.getProizvodjac())
             .ifPresent(proizvodjac -> proizvodjaci.add(0, proizvodjac));
       }
     }
@@ -67,7 +67,8 @@ public class ProizvodjacService {
     for (RobaDto roba : robaDtos) {
       proizvodjaci.stream()
           .filter(proizvodjac -> proizvodjac.getProid().equals(roba.getProizvodjac().getProid()))
-          .findFirst().ifPresent(roba::setProizvodjac);
+          .findFirst()
+          .ifPresent(roba::setProizvodjac);
     }
   }
 
@@ -87,24 +88,23 @@ public class ProizvodjacService {
   }
 
   private List<Proizvodjac> pronadjiSve() {
-    return proizvodjacRepository.findAllByOrderByNazivAsc()
-        .stream()
+    return proizvodjacRepository.findAllByOrderByNazivAsc().stream()
         .filter(proizvodjac -> !proizvodjac.getNaziv().equals("0"))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public List<Proizvodjac> proizvodjaciKateogrija(List<PodGrupa> podgrupe) {
-    Set<String> filterRoba = robaService.pronadjiSvuRobuPoPodGrupiIdListaSvaStanja(
-            podgrupe.stream().map(PodGrupa::getPodGrupaId).collect(Collectors.toList()))
-        .stream()
-        .map(robaEnitet -> robaEnitet.getProizvodjac().getProid())
-        .collect(Collectors.toSet());
-    return proizvodjacRepository.findByProidIn(filterRoba)
-        .stream()
+    Set<String> filterRoba =
+        robaService
+            .pronadjiSvuRobuPoPodGrupiIdListaSvaStanja(
+                podgrupe.stream().map(PodGrupa::getPodGrupaId).toList())
+            .stream()
+            .map(robaEnitet -> robaEnitet.getProizvodjac().getProid())
+            .collect(Collectors.toSet());
+    return proizvodjacRepository.findByProidIn(filterRoba).stream()
         .sorted(Comparator.comparing(Proizvodjac::getNaziv))
-        .collect(Collectors.toList());
+        .toList();
   }
-
 
   public Optional<Proizvodjac> vratiProizvodjacaPoPk(String id) {
     return proizvodjacRepository.findById(id);
