@@ -2,6 +2,8 @@ package com.automaterijal.application.services.roba.grupe;
 
 import com.automaterijal.application.domain.entity.Grupa;
 import com.automaterijal.application.domain.repository.GrupaRepository;
+import java.util.List;
+import java.util.Optional;
 import lombok.AccessLevel;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
@@ -9,10 +11,6 @@ import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -28,7 +26,7 @@ public class GrupaService {
         return grupaRepository.findByNaziv(naziv)
                 .stream()
                 .map(Grupa::getGrupaid)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public String vratiNazivGrupePoId(final String id) {
